<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SangiCommands</string>
    <string name="Heading">Recognized Text</string>
    <string name="action_settings">Settings</string>
    <string name="Record">Start</string>
    <string name="sendData">Send commands via Bluetooth</string>
    <string name="sendDataIce">Send Data over wifi</string>
    <string name="stemmerTest">Test Stemmer</string>

</resources>
