<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sangi.sangicommands.MainActivity" >

    <TextView
        android:id="@+id/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Heading" />
    <EditText 
        android:id="@+id/translatedText"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Heading"
        />
	 <Button
	     android:id="@+id/speechStart"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_below="@id/translatedText"
	     android:layout_marginTop="20sp"
	     android:text="@string/Record"
	     android:textSize="12sp" />
	 
	  <Button
	     android:id="@+id/sendDataBluetooth"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_below="@id/speechStart"
	     android:layout_marginTop="20sp"
	     android:text="@string/sendData"
	     android:textSize="12sp" />
	  
	  <Button
	     android:id="@+id/sendDataIce"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_below="@id/sendDataBluetooth"
	     android:layout_marginTop="20sp"
	     android:text="@string/sendDataIce"
	     android:textSize="12sp" />
	  <Button
	     android:id="@+id/stemmerTest"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_below="@id/sendDataIce"
	     android:layout_marginTop="20sp"
	     android:text="@string/stemmerTest"
	     android:textSize="12sp" />

</RelativeLayout>
